@@ -1057,6 +1057,7 @@ process_command(dbref player, char *command, dbref cause, int from_port)
   char *cptr;
   dbref errdb;
   dbref check_loc;
+  COMMAND_INFO *cmd;
 
   if (!errdblist)
     if (!(errdblist = mush_calloc(errdbsize, sizeof(dbref), "errdblist")))
@@ -1138,16 +1139,20 @@ process_command(dbref player, char *command, dbref cause, int from_port)
       if (Mobile(player)) {
         /* if the "player" is an exit or room, no need to do these checks */
         /* try matching enter aliases */
-        if (check_loc != NOTHING &&
+        if (check_loc != NOTHING && (cmd = command_find("ENTER")) &&
+            !(cmd->type & CMD_T_DISABLED) &&
             (i = alias_list_check(Contents(check_loc), cptr, "EALIAS")) != -1) {
-
-          sprintf(temp, "#%d", i);
-          do_enter(player, temp);
+          if (command_check(player, cmd, 1)) {
+            sprintf(temp, "#%d", i);
+            run_command(cmd, player, cause, tprintf("ENTER #%d", i), NULL, NULL, tprintf("ENTER #%d", i), NULL, NULL, temp, NULL, NULL, NULL);
+          }
           goto done;
         }
         /* if that didn't work, try matching leave aliases */
-        if (!IsRoom(check_loc) && (loc_alias_check(check_loc, cptr, "LALIAS"))) {
-          do_leave(player);
+        if (!IsRoom(check_loc) && (cmd = command_find("LEAVE")) && !(cmd->type & CMD_T_DISABLED) &&
+            (loc_alias_check(check_loc, cptr, "LALIAS"))) {
+          if (command_check(player, cmd, 1))
+            run_command(cmd, player, cause, "LEAVE", NULL, NULL, "LEAVE", NULL, NULL, NULL, NULL, NULL, NULL);
           goto done;
         }
       }
@@ -1174,11 +1179,11 @@ process_command(dbref player, char *command, dbref cause, int from_port)
            * so we check for exits and commands
            */
           /* check zone master room exits */
-          if (remote_exit(player, cptr)) {
-            if (!Mobile(player))
+          if (remote_exit(player, cptr) && (cmd = command_find("GOTO")) && !(cmd->type & CMD_T_DISABLED)) {
+            if (!Mobile(player) || !command_check(player, cmd, 1)) {
               goto done;
-            else {
-              do_move(player, cptr, MOVE_ZONE);
+            } else {
+              run_command(cmd, player, cause, tprintf("GOTO %s", cptr), NULL, NULL, tprintf("GOTO %s", cptr), NULL, NULL, cptr, NULL, NULL, NULL);
               goto done;
             }
           } else
@@ -1206,11 +1211,11 @@ process_command(dbref player, char *command, dbref cause, int from_port)
       /* end of zone stuff */
       /* check global exits only if no other commands are matched */
       if ((!a) && (check_loc != MASTER_ROOM)) {
-        if (global_exit(player, cptr)) {
-          if (!Mobile(player))
+        if (global_exit(player, cptr) && (cmd = command_find("GOTO")) && !(cmd->type & CMD_T_DISABLED)) {
+          if (!Mobile(player) || !command_check(player, cmd, 1))
             goto done;
           else {
-            do_move(player, cptr, MOVE_GLOBAL);
+            run_command(cmd, player, cause, tprintf("GOTO %s", cptr), NULL, NULL, tprintf("GOTO %s", cptr), NULL, NULL, cptr, NULL, NULL, NULL);
             goto done;
           }
         } else
